# cosc-32001-computer-vision

./: .gitignore  README.md  pyproject.toml
Assignments/Assignment 1/: readme.md
Assignments/Assignment 2/: Readme.md
Assignments/Assignment 3/: Readme.md
Assignments/Assignment 4/: Readme.md
Assignments/Assignment 5/: Readme.md
basics/: basics.ipynb  main.py
week 7/: Interactive_week7.ipynb
week_10/: Week10_interactive.ipynb
week_11/: interactive_week11.ipynb
week_2/: basics.ipynb
week_8/: Interactive_week8.ipynb
week_9/: Interactive_week9.ipynb
